# minecraft

./: CMakeLists.txt  README.md
include/glad/: gl.h  glad.h
res/shader/: default.frag  default.fs  default.vert  default.vs
scripts/: build.ps1  build_and_run.ps1
src/: glad.c  main.cpp
src/gfx/: colour.h  image.cpp  image.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vertex_attribute.cpp  vertex_attribute.h  vertex_attribute_information.h  window.cpp  window.h
src/util/: input.cpp  input.h  project_file_system.cpp  project_file_system.h  types.h
